hphp/hack/test/typecheck/is_expression/tconst4.php.like_types.exp
File "tconst4.php", line 7, characters 15-21:
Invalid "is" expression hint (Typing[4195])
File "tconst4.php", line 14, characters 18-21:
The "is" operator cannot be used with a union
